tests/fixtures/invalid/min_list_float.py
# Cannot call min() with List[int], Float
x = min([1, 2, 3], 1.0)
